--- a/Project EFT/Views/Shared/GenericProblem.cshtml
+++ b/Project EFT/Views/Shared/GenericProblem.cshtml
@@ -7,3 +7,4 @@
 <div>@ViewData["problem"]</div>
 <input type="text" id="answer" name="answer" /><br />
 <input type="submit" value="Submit your answer!" />
+<div></div>
