--- a/Project EFT/Views/Shared/GenericCipher.cshtml
+++ b/Project EFT/Views/Shared/GenericCipher.cshtml
@@ -1,6 +1,43 @@
 @{
     ViewData["Title"] = "Generic Cipher Page";
+
+    // default form values
+    string cipherTextInput = "";
+    string plainTextInput = "";
+    string alphabet = "abcdefghijklmnopqrstuvwxyz";
+    int encryptShiftAmount = 3;
+
+    // if a form on this page was submitted
+    if (Context.Request.Method == "POST")
+    {
+        // populate with form / calculated data
+        cipherTextInput = (string)ViewData["ciphertext"];
+        plainTextInput = ViewData["plainTextInput"].ToString();
+        alphabet = ViewData["alphabet"].ToString();
+        encryptShiftAmount = int.Parse(ViewData["encryptShiftAmount"].ToString());
+    }
 }
 
 <h1>@ViewData["Title"]</h1>
-<h2>@ViewData["echo"]</h2>
+
+<!-- encryption form-->
+<form action="~/GenericCipher/encrypt" method="post">
+    <h6>Encrypt Cipher</h6>
+    <textarea name="plainTextInput" cols="50" rows="4" placeholder="Enter plaintext here...">@plainTextInput</textarea>
+    <br>
+    Enter alphabet:
+    <input type="text" name="alphabet" value="@alphabet" /><br />
+    Enter shift amount:
+    <input type="number" name="encryptShiftAmount" value="@encryptShiftAmount" /><br />
+    <input type="submit" value="Encrypt">
+</form>
+
+<!-- decryption form-->
+<form action="~/GenericCipher" method="post">
+    <h6>Decrypt Cipher</h6>
+    <textarea name="cipherTextInput" cols="50" rows="4" placeholder="Enter ciphertext here...">@cipherTextInput</textarea>
+    <br>
+    Enter alphabet:
+    <input type="text" name="alphabet" value="@alphabet" />
+    <input type="submit" value="Decrypt">
+</form>
