--- a/Project EFT/Views/Shared/GenericCipher.cshtml
+++ b/Project EFT/Views/Shared/GenericCipher.cshtml
@@ -40,7 +40,7 @@
     <textarea name="cipherTextInput" cols="50" rows="4" placeholder="Enter ciphertext here...">@cipherTextInput</textarea>
     <br>
     Enter alphabet:
-    <input type="text" name="alphabet" value="@alphabet" />
+    <input type="text" name="alphabet" value="@alphabet" /><br />
     Enter shift amount:
     <input type="number" name="decryptShiftAmount" value="@decryptShiftAmount" /><br />
     <input type="submit" value="Decrypt">
