--- a/Project EFT/Views/Home/ProblemList.cshtml
+++ b/Project EFT/Views/Home/ProblemList.cshtml
@@ -17,10 +17,10 @@
         foreach (Problem problem in problems) 
         { 
         <tr>
-            <th>@problem.problemNumber</th>
-            <th><a href="/problem?ID=@problem.problemNumber">@problem.title</a></th>
-            <th>@problem.attempts</th>
-            <th>@problem.completions</th>
+            <th>@problem.ProblemNumber</th>
+            <th><a href="/problem?ID=@problem.ProblemNumber">@problem.Title</a></th>
+            <th>@problem.Attempts</th>
+            <th>@problem.Completions</th>
         </tr>
         }
     }
