--- a/Project EFT/Views/Shared/Problem.cshtml
+++ b/Project EFT/Views/Shared/Problem.cshtml
@@ -3,14 +3,35 @@
 
 @if ((bool)ViewData["ShowPage"])
 {
-<h1>@ViewData["Title"]</h1>
-<h2>@ViewData["problemNumber"]</h2>
-<div>@ViewData["problem"]</div>
-<input type="text" id="answer" name="answer" /><br />
-<input type="submit" value="Submit your answer!" />
-<div></div>
+    <h1>@ViewData["Title"]</h1>
+    <h2>This is problem number @ViewData["problemNumber"].</h2>
+    <div>@ViewData["problem"]</div>
+
+    <!-- submission form-->
+    <form action="~/Problem/CheckAnswer" method="post">
+        <input type="text" id="answer" name="answer" /><br />
+        <input type="submit" value="Submit your answer!" />
+        <input type="hidden" id="problemNumber" name="problemNumber" value="@ViewData["problemNumber"]" />
+        <div></div>
+    </form>
+
+    @if (ViewData["isCorrect"] == null)
+    {
+
+
+    }
+    else if ((bool)ViewData["isCorrect"])
+    {
+        <div style="color:green">Correct!</div>
+    }
+    else if (!(bool)ViewData["isCorrect"])
+    {
+        <div style="color:crimson">Incorrect, please try again!</div>
+    }
 }
 else
 {
     <h1>This problem has not yet been created!</h1>
 }
+
+
