--- a/Project EFT/Views/Shared/Signup.cshtml
+++ b/Project EFT/Views/Shared/Signup.cshtml
@@ -1,26 +1,78 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http;
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+@using Project_EFT.Data_Classes;
+@{ISession session = HttpContextAccessor.HttpContext.Session; }
+@{
 
     string username = "";
     string email = "";
+    string signupErrorMessage = "";
 
     // if a form on this page was submitted
     // will only happen when error in form data occurs
-    if (Context.Request.Method == "POST")
+    if (session.ContainsKey("errorMessage"))
     {
-        // repopulate form data
-        username = ViewData["username"].ToString();
-        email = ViewData["email"].ToString();
+        signupErrorMessage = session.GetString("errorMessage");
+        session.Remove("errorMessage");
+    }
+    if (session.ContainsKey("username"))
+    {
+        username = session.GetString("username");
+        email = session.GetString("email");
+        session.Remove("username");
+        session.Remove("email");
     }
 }
-
-<form action="~/Signup/SubmitSignup" method="post">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.12.0/js/md5.min.js"></script>
+<form id="signup" action="~/Signup/SubmitSignup" method="post">
     Enter Username:<br>
-    <input type="text" name="username" value="@username" /><br>
+    <input type="text" id="username" name="username" value="@username" /><br>
+    <div class="error" id="username-error"></div>
     Enter Email:<br>
-    <input type="text" name="email" value="@email" /><br>
-    Enter Password:<br>
-    <input type="password" name="password" /><br>
-    Confirm Password:<br>
-    <input type="password" name="confirmPassword" /><br>
-    <input type="submit" value="Sign up!">
+    <input type="text" id="email" name="email" value="@email" /><br>
+    <div class="error" id="email-error"></div>
+    <input type="hidden" id="password" name="password" />
 </form>
+    Enter Password:
+<br>
+<input type="password" id="passwordEntry" name="passwordEntry" />
+<br>
+<div class="error" id="password-error"></div>
+    Confirm Password:
+<br>
+<input type="password" id="confirmPassword" name="confirmPassword" />
+<br>
+<div class="error" id="confirm-password-error"></div>
+<div class="error">@signupErrorMessage</div>
+<input type="button" value="Sign up!" onclick="verifySignup()">
+
+<script>
+    function verifySignup() {
+        let usernameElement = document.getElementById("username");
+        let emailElement = document.getElementById("email");
+        let passwordEntryElement = document.getElementById("passwordEntry");
+        let confirmPasswordElement = document.getElementById("confirmPassword");
+        let passwordSubmissionElement = document.getElementById("password");
+        let username = usernameElement.value.trim();
+        let email = emailElement.value.trim();
+        let password = passwordEntryElement.value.trim();
+        let confirmPassword = confirmPasswordElement.value.trim();
+
+        let usernameGood = username.length > 0;
+        let emailGood = verifyInformation(email, TYPE_EMAIL);
+        let passwordComplex = verifyInformation(password, TYPE_PASSWORD);
+        let passwordsMatch = password == confirmPassword;
+
+        if (usernameGood && emailGood && passwordComplex && passwordsMatch) {
+            usernameElement.value = username;
+            emailElement.value = email;
+            passwordSubmissionElement.value = md5(password);
+            document.getElementById("signup").submit();
+        } else {
+            document.getElementById("username-error").innerHTML = usernameGood ? "" : "Please enter a valid username.";
+            document.getElementById("email-error").innerHTML = emailGood ? "" : "Please enter a valid email.";
+            document.getElementById("password-error").innerHTML = passwordComplex ? "" : "Please enter a valid password. <br> A valid password is at least 8 characters, and includes at least one number, uppercase letter, and symbol.";
+            document.getElementById("confirm-password-error").innerHTML = passwordsMatch ? "" : "Passwords must match.";
+        }
+    }
+</script>
