--- a/Project EFT/Views/Shared/_Layout.cshtml
+++ b/Project EFT/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             if (session.ContainsKey("userInfo") || session.ContainsKey("adminInfo"))
                             {
                                 <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="EditInfo" asp-action="editInfo">Edit Account Info</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="logout">Log Out</a>
                                 </li>
                             }
