Only Users can submit Answers

--- a/Project EFT/Views/Shared/Problem.cshtml
+++ b/Project EFT/Views/Shared/Problem.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@using Microsoft.AspNetCore.Http;
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+@using Project_EFT.Data_Classes;
+@{ISession session = HttpContextAccessor.HttpContext.Session; }
 
 
 @if ((bool)ViewData["ShowPage"])
@@ -6,15 +9,20 @@
     <h1>@ViewData["Title"]</h1>
     <h2>This is problem number @ViewData["problemNumber"].</h2>
     <div>@ViewData["problem"]</div>
-
-    <!-- submission form-->
-    <form action="~/Problem/CheckAnswer" method="post">
-        <input type="text" id="answer" name="answer" /><br />
-        <input type="submit" value="Submit your answer!" />
-        <input type="hidden" id="problemNumber" name="problemNumber" value="@ViewData["problemNumber"]" />
-        <div></div>
-    </form>
-
+    @if (session.ContainsKey("userInfo"))
+    {
+        <!-- submission form-->
+        <form action="~/Problem/CheckAnswer" method="post">
+            <input type="text" id="answer" name="answer" /><br />
+            <input type="submit" value="Submit your answer!" />
+            <input type="hidden" id="problemNumber" name="problemNumber" value="@ViewData["problemNumber"]" />
+            <div></div>
+        </form>
+    }
+    else
+    {
+        <br /><br /><div>In order to submit a solution you must sign in to a User account.</div>
+    }
     @if (ViewData["isCorrect"] == null)
     {
 
