--- a/Project EFT/Views/Shared/_Layout.cshtml
+++ b/Project EFT/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ProblemList">Problems</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CipherList">Ciphers</a>
+                        </li>
                         @{
                             if (session.ContainsKey("adminInfo"))
                             {
