--- a/Project EFT/Views/Shared/AddProblemPage.cshtml
+++ b/Project EFT/Views/Shared/AddProblemPage.cshtml
@@ -18,14 +18,11 @@
         <div></div>
     </form>
 
-    @if (ViewData["message"] == null)
-    {
-
-    }
-    else
+    @if (ViewData["message"] != null)
     {
         <div>@ViewData["message"]</div>
     }
+    
 }
 else
 {
