--- a/Project EFT/Views/Home/Index.cshtml
+++ b/Project EFT/Views/Home/Index.cshtml
@@ -104,7 +104,8 @@
             <div class="error" id="login-error"> @loginErrorMessage</div>
         </div>
         <div>
-            <a href="/signup">Not already a user?  Click here to make an account!</a>
+            <a href="/signup">Not already a user?  Click here to make an account!</a><br />
+            <a href="/Recovery">Click here to recover account information.</a>
         </div>
     }
     <script>
