--- a/Project EFT/Views/Shared/Error.cshtml
+++ b/Project EFT/Views/Shared/Error.cshtml
@@ -1,4 +1,8 @@
-﻿@model ErrorViewModel
+﻿<!--
+    
+    keeping for just in case
+
+@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
@@ -23,3 +27,5 @@
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
 </p>
+-->
+<h2 class="text-danger">An error occurred while processing your request.</h2>
